--- a/pom.xml
+++ b/pom.xml
@@ -332,6 +332,12 @@
       <version>6.0.7.Final</version>
     </dependency>
 
+<!--    文件上传-->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.3</version>
+    </dependency>
 
   </dependencies>
 
